--- a/src/_includes/partials/htmlhead.njk
+++ b/src/_includes/partials/htmlhead.njk
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ title }}</title>
   <meta name="description" content="{{ description }}">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=fallback" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="icon" href="favicon.svg">
 </head>
