--- a/src/scss/03-elements/_primary.scss
+++ b/src/scss/03-elements/_primary.scss
@@ -11,7 +11,8 @@ body {
   background-color: var(--color-back1);
 }
 
-h1, h2 {
+h1,
+h2 {
   font-size: 2rem;
   margin: 0;
 }
@@ -22,10 +23,12 @@ h2 {
 }
 
 p {
-  margin-block: 1rem 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
-h1 + p, h2 + p {
+h1 + p,
+h2 + p {
   margin-block-start: 0;
 }
 
@@ -38,11 +41,10 @@ svg {
 }
 
 a {
-
   position: relative;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     bottom: 2px;
     left: 0;
@@ -54,18 +56,20 @@ a {
     transition: transform 0.3s ease-in;
   }
 
-  &:link, &:visited {
+  &:link,
+  &:visited {
     font-weight: var(--font-bold);
     text-decoration: none;
     color: var(--color-back3);
   }
 
-  &:hover, &:active, &:focus {
+  &:hover,
+  &:active,
+  &:focus {
     color: var(--color-back4);
 
     &::before {
       transform: scaleX(1);
     }
   }
-
 }
